# service-persistence-notebookum

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py
app/models/: document.py  summary.py  user.py
app/routes/: db_documents.py  db_summaries.py  db_users.py
migrations/: env.py
migrations/versions/: 20260412_1403_ab534f6e478d_create_usuarios_table_for_user_model.py  20260413_0026_f2a1d9b3c4e7_create_historial_documentos_and_update_resumenes.py
tests/: conftest.py
tests/contract/: test_db_documents_api.py  test_db_summaries_api.py  test_db_users_api.py
tests/unit/: test_document_model.py  test_summary_model.py  test_user_model.py
