[project]
name = "service-persistence-notebookum"
version = "0.1.0"
description = "Persistence Microservice for NotebookUm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "sqlalchemy>=2.0",
    "flask-sqlalchemy>=3.1",
    "mysql-connector-python>=8.0",
    "alembic>=1.13",
    "granian>=1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
]
